:memo: docs:Create Readme
Create readme file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="avatar">
             <img src="./assets/images/avatar.jpg" alt="Avatar do usuário">
-            <span>Nome</span>
+            <span>Wilson</span>
         </div>
         
         <div class="search__icon">
